# multi-chain-liquidator

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  HANDOFF.md  TASKS.md
.firecrawl/: arb-full-node.md  arb-node-overview.md  arb-node2.md  arbitrum-reqs.md  aws-freetier-bypass.json  aws-freetier-update.md  hl-node-contabo.md  hl-node-guide.md  hl-node-lowspec.json  hl-node-real-usage.json  hyperevm-reqs.md  hyperevm-wallet.md
contracts/: foundry.toml
contracts/src/: BalancerFlashLoanLiquidator.sol  FlashLoanLiquidator.sol  HyperEVMFlashLoanLiquidator.sol  HypurrFiFlashLoanLiquidator.sol  InkFlashLoanLiquidator.sol  LendleCrossPoolLiquidator.sol  MantleFlashLoanLiquidator.sol  MorphoFlashHyperLendLiquidator.sol  MorphoLiquidator.sol
data/backfill-progress/: hyperlend.json  hypurrfi.json  lendle.json  mantle-aave-v3.json  morpho.json  tydro.json
docs/: oracle-prediction-plan.md
research/: ALL-LENDING-PROTOCOLS-2026-03-05.md  ANALYSIS-VERDICT-2026-03-10.md  CORRECTED-LIQUIDATIONS-2026-03-06.md  DEEP-RESEARCH-2026-03-05.md  WHY-ZERO-LIQUIDATIONS-2026-03-05.md  bot-logs-analysis.md  competitor-census-2026-03-11.md  competitor-contracts-2026-03-11.md  contract-dex-analysis.md  gap-audit-2026-03-11.md  latency-gas-hyperlend-2026-03-11.md  latency-gas-lendle-2026-03-11.md  liquidation-new-chains-2026-03-05.md  mantle-aave-v3-positions-2026-03-06.md  market-opportunity-2026-03-11.md  onchain-analysis.md
scripts/: analyze-census.mjs  analyze-latency-gas.mjs  backfill-liquidations.mjs
src/: main.rs
src/chains/: hyperevm.rs  (+3 more)
static/: dashboard.html  login.html
(+40 files in other folders)
